[project]
name = "blog-keyword-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.51,<3",
  "openai-agents==0.4.2",
  "pydantic>=2.7,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.4,<2",
  "python-dotenv>=1.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["apps*", "agents*"]

[tool.ruff]
line-length = 100
